@@ -40,7 +40,7 @@ public class AdminSanityCheck extends CompositeCommand {
         }
         if (args.isEmpty()) return true;
         // Check phase
-        Optional<OneBlockPhase> opPhase = addon.getOneBlockManager().getPhase(args.get(0).toUpperCase());
+        Optional<OneBlockPhase> opPhase = addon.getOneBlockManager().getPhase(args.getFirst().toUpperCase());
         if (opPhase.isEmpty()) {
             user.sendMessage("aoneblock.commands.admin.setchest.unknown-phase");
             return false;
