@@ -45,7 +45,7 @@ public class AdminSetCountCommand extends CompositeCommand {
         // Get target player
         UUID targetUUID = getPlayers().getUUID(args.get(0));
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Get their island
